--- a/css/styles.css
+++ b/css/styles.css
@@ -115,4 +115,23 @@ body {
   max-width: 7rem;
 }
 
+.sec-home {
+  display: flex;
+  width: 100%;
+  max-width: 768px;
+  margin: 0 auto;
+  padding: 5rem;
+  align-items: center;
+}
+.sec-home .home-cta {
+  flex: 1;
+}
+.sec-home .home-cta .cta-text {
+  color: #0075ff;
+}
+.sec-home .home-cta .home-title {
+  width: 20rem;
+  font-size: 3rem;
+}
+
 /*# sourceMappingURL=styles.css.map */
