--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -1,4 +1,5 @@
 $color-main: #0075ff;
+$color-footer: #f4f8fe;
 
 @mixin boton-sm-modify {
     font-size: 0.75rem;
@@ -74,12 +75,12 @@ $color-main: #0075ff;
     }
 }
 
-.feature{
+.benefit{
     display: flex;
     flex-direction: column;
     .icon{
         color: $color-main;
-        font-size: 10rem;
+        font-size: 7.5rem;
         text-align: center;
     }
 
@@ -115,7 +116,7 @@ $color-main: #0075ff;
         padding: 0;
     }
     .title{
-        margin-top: -2rem;
+        margin-top: -1rem;
         font-size: 1.5rem;
         font-weight: 600;
     }
