--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -7,6 +7,10 @@
     padding: 3rem;
 }
 
+html{
+    min-width: 100vw;
+}
+
 body{
     padding: 0;
     margin: 0;
@@ -39,6 +43,14 @@ body{
         .home-title{
             width: 20rem;
             font-size: 3rem;
+        }
+        .home-description{
+            width: 300px
+        }
+        .lead-magnet{
+            .input-col{
+                max-width: 200px
+            }
         }
     }
 }
@@ -92,6 +104,125 @@ body{
         .image{
             img{
                 max-width: 20rem;
+            }
+        }
+    }
+}
+
+.sec-benefits{
+    border-top: 1px solid #ddd;
+
+    .intro{
+        @extend .sec-features, .intro;
+
+    }
+
+    .benefits-cards{
+        width: 100%;
+        padding: 0 2rem 2rem 2rem;
+    }
+}
+
+
+.sec-kpis{
+    width: 100%;
+    background-color: componentes.$color-main;
+    color: white;
+    padding: 4rem;
+
+    .kpi{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 3.5rem;
+        font-weight: 600;
+    }
+
+    .desc{
+        font-size: 0.9rem;
+        color: #ffffffaa;
+    }
+}
+
+.sec-onboarding{
+    .intro{
+        @extend .sec-features, .intro
+    }
+
+    .steps{
+        padding: 0 7rem 5rem 7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .step-separator{
+            flex: 1;
+            border-top: 2px solid #ddd;
+            margin: 0 1rem;
+        }
+    }
+}
+
+.sec-footer-cta{
+    background-color: componentes.$color-footer;
+    padding: 5rem;
+    background-image: url("../assets/img/bg1.png");
+    background-repeat: no-repeat;
+    background-position: 100%;
+
+    .footer-cta{
+        width: 50%;
+
+        .cta-title{
+            font-size: 2rem;
+        }
+    
+        .cta-description{
+            font-size: 1.1rem;
+        }
+    }
+
+
+}
+
+@media (max-width: 768px){
+    .sec-onboarding{
+
+        .steps{
+            flex-direction: column;
+            .icon-desc{
+                .title{
+                    text-align: center;
+                }
+            }
+        }
+    }
+
+    .sec-footer-cta{
+        background-image: none;
+        .footer-cta{
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    .sec-benefits{
+        .intro {
+            text-align: center;
+
+            h3{
+                font-size: 2rem;
+            }
+        }
+    }
+
+    .sec-features{
+        .intro{
+            h3{
+                font-size: 2rem;
+            }
+            p{
+                font-size: 1rem;
             }
         }
     }
